# wald-decision-agent

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/raw/: annual_report_2024.md  board_financial_pack.xlsx  department_scorecard.csv  leadership_brief_long.txt  messy_financial_pack.xlsx  operational_steering_memo.docx  q2_operational_update.md  regional_actuals.csv  regional_targets.csv  revenue_trend.csv  risk_register.csv
data/sample_questions/: validation.json
notebooks/: demo.ipynb
scripts/: generate_demo_assets.py
src/wald_agent_reference/: __init__.py  main.py  utils.py
src/wald_agent_reference/chat/: __init__.py  manager.py
src/wald_agent_reference/core/: __init__.py  agent.py  config.py  logging.py  models.py  models_v2.py  tools.py
src/wald_agent_reference/evaluation/: evaluate.py
src/wald_agent_reference/ingestion/: ingest.py  pdf_table_extractor.py  (+2 more)
src/wald_decision_agent/: __init__.py
tests/: conftest.py  test_agent_sql_path.py  test_answer_diagnostics.py  test_answer_format.py  test_bug_fix_integration.py  test_calculator.py  test_combined_data_scenarios.py  test_complex_assets.py  test_concise_response_format.py  test_conversation_context.py  test_document_memory.py  test_endpoint_concise_response.py  test_grounding.py  test_hallucination_prevention.py  test_hybrid_intelligent_sourcing.py  test_ingestion.py  test_integration_scenarios.py  test_large_attachments.py  test_logging.py  test_planner.py  test_planner_document_priority.py  test_prompt_guardrails.py  test_retrieval.py  test_retrieval_inspection.py  test_retrieval_quality.py  test_spreadsheet_parser.py  test_sql_agent.py  test_structured_store.py  test_supermemory_backend.py  test_title_api_response.py  test_visual_data.py  test_visual_extractor.py  test_visual_reasoner.py  test_visualize.py  test_web_app.py
(+37 files in other folders)
